# llvmbc-dump

./: 00001-main.c.ll  00002-foo.c.ll  00003-bar.c.ll  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  Makefile  bit.c  defs.h  dump.c  extr.c  func.c  main.c  mod.c
tests/: CMakeLists.txt  Makefile.BSD
tests/lib/: CMakeLists.txt  Makefile  foobar.h
tests/src/: CMakeLists.txt  Makefile.BSD  main.c  test
